--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/background_gradient"
+    tools:context=".MainActivity"
+    tools:ignore="ExtraText">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <!-- androidx.constraintlayout.widget.ConstraintLayout-->
+   <LinearLayout
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_centerHorizontal="true"
+       android:layout_marginTop="25dp"
+       android:layout_marginBottom="20dp"
+       android:gravity="center"
+       android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="195dp"
+          android:fontFamily="@font/stalinist_one"
+          android:text="@string/logo_name"
+          android:textAlignment="center"
+          android:textColor="@android:color/white"
+          android:textSize="20sp" />
+
+      <ImageView
+          android:layout_width="100dp"
+          android:layout_height="105dp"
+          android:layout_marginTop="30dp"
+          android:src="@drawable/logo"
+          app:layout_constraintLeft_toLeftOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:fontFamily="@font/pt_sans"
+          android:text="@string/authorization_name"
+          android:textAlignment="center"
+          android:textColor="@android:color/white"
+          android:textSize="20sp" />
+
+      <EditText
+          android:id="@+id/activity_main_usernameEditText"
+          android:layout_width="220dp"
+          android:layout_height="28dp"
+          android:layout_marginTop="26dp"
+          android:background="@drawable/login_form"
+          android:inputType="text"
+          android:singleLine="false"
+          android:text="@string/login_form_username"
+          android:textColor="@color/hidingTextColor"
+          android:textSize="11sp"
+          android:gravity="start|center_vertical"
+          android:paddingStart="10dp"
+          android:paddingTop="9sp"
+          android:paddingBottom="4dp"
+          android:paddingEnd="5dp"/>
+
+
+      <EditText
+          android:id="@+id/activity_main_passwordEditText"
+          android:layout_width="220dp"
+          android:layout_height="28dp"
+          android:layout_marginTop="25dp"
+          android:background="@drawable/password_form"
+          android:inputType="text"
+          android:singleLine="false"
+          android:text="@string/login_form_password"
+          android:textColor="@color/hidingTextColor"
+          android:textSize="11sp"
+          android:gravity="start|center_vertical"
+          android:paddingStart="10dp"
+          android:paddingTop="9sp"
+          android:paddingBottom="4dp"
+          android:paddingEnd="5dp"/>
+
+      <Button
+          android:id="@+id/btnEnter"
+          android:layout_width="220dp"
+          android:layout_height="45dp"
+          android:layout_marginTop="47dp"
+          android:background="@drawable/btn_enter"
+          android:fontFamily="@font/pt_sans"
+          android:text="@string/btnEnter_name"
+          android:textColor="@color/btnEnterTextColor" />
+
+   </LinearLayout>
+</RelativeLayout>
