--- a/app/src/main/res/layout/activity_warning.xml
+++ b/app/src/main/res/layout/activity_warning.xml
@@ -12,35 +12,35 @@
         android:id="@+id/layout2"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="5dp"
         android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/buttonWarning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_gravity="bottom|start"
-            android:layout_weight="1"
-            android:text="Тревога"
+            android:background="@drawable/warning_en_icon"
             android:textColor="@color/btnEnterTextColor"/>
 
         <Button
             android:id="@+id/buttonInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_gravity="bottom|center_horizontal"
-            android:layout_weight="1"
-            android:text="Информация"
+            android:background="@drawable/info_dis_icon"
             />
 
         <Button
             android:id="@+id/buttonChat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_gravity="bottom|end"
-            android:layout_weight="1"
-            android:text="Чат"
+            android:background="@drawable/chat_dis_icon"
             />
     </FrameLayout>
 
