--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -75,6 +75,7 @@
             android:layout_marginEnd="40dp"
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal|top"
+            android:contentDescription="@string/logo_name"
             app:srcCompat="@drawable/img" />
     </LinearLayout>
 </RelativeLayout>
